[package]
name = "ocvm"
version = "0.1.0"
edition = "2021"
description = "OpenClaw Version Manager"
license = "MIT"
repository = "https://github.com/openclaw/ocvm"
readme = "README.md"
keywords = ["openclaw", "version-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ocvm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
